--- a/src/main/java/com/mycompany/coffeeshopdesktopex/SalaryPage.form
+++ b/src/main/java/com/mycompany/coffeeshopdesktopex/SalaryPage.form
@@ -179,6 +179,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Search"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSearchActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
@@ -273,6 +276,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Pay Now"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPayNowActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnPrintSlip">
       <Properties>
